# LocalTranslate

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SearchableComboBox.qml  config.hpp.in  hugo.toml  main.cpp  main.qml  qtquickcontrols2.conf  resources.qrc  translation_bridge.cpp  translation_bridge.hpp
.github/workflows/: hugo.yaml
completions/: _localtranslate  localtranslate.bash  localtranslate.fish
content/: _index.org
content/docs/: building-from-source.org  obtaining-firefox-models.org  quickstart-guide.org  user-manual.org
desktop/: convert.sh  dev.ters.LocalTranslate.desktop  dev.ters.LocalTranslate.metainfo.xml
scripts/: process-firefox-translations-models.py
